updated chart style

--- a/Calendar/task/Develop/index.html
+++ b/Calendar/task/Develop/index.html
@@ -27,22 +27,30 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
-
     </header>
+
     <div class="container">
       <div class="col">
-        <div class="1am">1</div>
+        <div class="1am">1am</div>
+        <input />
+        <button>save</button>
       </div>
-        <div class="col">
-          <div class="1am">2</div>
-        </div>
       <div class="col">
-        <div class="1am">3</div>
+        <div class="1am">2am</div>
+        <input />
+        <button>save</button>
       </div>
-        <div class="col">
-          <div class="1am">4</div>
-        </div>
+      <div class="col">
+        <div class="1am">3am</div>
+        <input />
+        <button>save</button>
       </div>
+      <div class="col">
+        <div class="1am">4am</div>
+        <input />
+        <button>save</button>
+      </div>
+
       <!-- Timeblocks go here -->
     </div>
 
