--- a/Calendar/task/Develop/index.html
+++ b/Calendar/task/Develop/index.html
@@ -31,22 +31,22 @@
 
     <div class="container">
       <div class="col">
-        <div class="1am">1am</div>
+        <div class="row">1am</div>
         <input />
         <button>save</button>
       </div>
       <div class="col">
-        <div class="1am">2am</div>
+        <div class="row">2am</div>
         <input />
         <button>save</button>
       </div>
       <div class="col">
-        <div class="1am">3am</div>
+        <div class="row">3am</div>
         <input />
         <button>save</button>
       </div>
       <div class="col">
-        <div class="1am">4am</div>
+        <div class="row">4am</div>
         <input />
         <button>save</button>
       </div>
